#==============================================================================
# Makefile.am for libsharpplus.a
# $Id: Makefile.am 426 2009-11-22 17:42:38Z neoneurone $
#==============================================================================
SUBDIRS = System

noinst_LTLIBRARIES = libsharpplus.la

libsharpplus_la_SOURCES =

noinst_HEADERS = \
	SharpPlus.h

libsharpplus_la_LIBADD = \
	System/libSystem.la

