#==============================================================================
# Makefile.am for the libnet.a
# $Id: Makefile.am 427 2009-11-23 22:48:26Z neoneurone $
#==============================================================================
AM_CPPFLAGS = -I@top_srcdir@/src/

noinst_LIBRARIES = libnet.a

libnet_a_SOURCES = \
	networking.cpp

noinst_HEADERS = \
	netnode.h \
	networking.h

