#==============================================================================
# Makefile.am for the libpngfuncs.a
# $Id: Makefile.am 427 2009-11-23 22:48:26Z neoneurone $
#==============================================================================
AM_CPPFLAGS = \
	-I@top_srcdir@/src/pngfuncs \
	-I@top_srcdir@/src

noinst_LIBRARIES = libpngfuncs.a

libpngfuncs_a_SOURCES = \
	pngfuncs.c

noinst_HEADERS = \
	pngfuncs.h

