#==============================================================================
# Makefile.am for the libtriangulation.a
# $Id: Makefile.am 427 2009-11-23 22:48:26Z neoneurone $
#==============================================================================
AM_CPPFLAGS = \
	-I@top_srcdir@/src/triangulation \
	-I@top_srcdir@/src

noinst_LIBRARIES = libtriangulation.a

libtriangulation_a_SOURCES = \
	star.cpp

noinst_HEADERS = \
	geometry.h \
	star.h \
	triangulation.h

