#==============================================================================
# Makefile.am for libInformation.la
# $Id: Makefile.am 425 2009-11-01 16:38:58Z neoneurone $
#==============================================================================
SUBDIRS = Software

noinst_LTLIBRARIES = libInformation.la

libInformation_la_SOURCES =

libInformation_la_LIBADD = \
	Software/libSoftware.la

