#==============================================================================
# Makefile.am for libReflection.la
# $Id: Makefile.am 427 2009-11-23 22:48:26Z neoneurone $
#==============================================================================
AM_CPPFLAGS = -I@top_srcdir@/src/framework

noinst_LTLIBRARIES = libReflection.la

libReflection_la_SOURCES = CMemberInfo.cpp

noinst_HEADERS = CMemberInfo.h

