#==============================================================================
# Makefile.am for libSoftware.la
# $Id: Makefile.am 427 2009-11-23 22:48:26Z neoneurone $
#==============================================================================
AM_CPPFLAGS = -I@top_srcdir@/src/framework

noinst_LTLIBRARIES = libSoftware.la

libSoftware_la_SOURCES = CSdl.cpp

noinst_HEADERS = CSdl.h

